@@ -1070,7 +1070,6 @@ namespace OpenBabel
   {
     vector<string> vs;
     char buffer[BUFF_SIZE];
-    bool valid_line=true;
 
     OBFFParameter parameter;
 
@@ -1083,51 +1082,51 @@ namespace OpenBabel
 
     // Set the locale for number parsing to avoid locale issues: PR#1785463
     obLocale.SetLocale();
-    valid_line= ifs.getline(buffer, BUFF_SIZE); //first line title block
-    valid_line= ifs.getline(buffer, BUFF_SIZE); //next line
-    while(valid_line && strlen(buffer)!=0) //read block 2 (atom mass and polarizability)
+    ifs.getline(buffer, BUFF_SIZE); //first line title block
+    ifs.getline(buffer, BUFF_SIZE); //next line
+    while(!ifs.fail() && strlen(buffer)!=0) //read block 2 (atom mass and polarizability)
       {
-	tokenize(vs, buffer," -\n\t");
-	parameter.clear();
+        tokenize(vs, buffer," -\n\t");
+        parameter.clear();
         parameter._a = vs[0]; //KNDSYM
         parameter._dpar.push_back(atof(vs[1].c_str())); // AMASS
         parameter._dpar.push_back(atof(vs[2].c_str())); // ATPOL [A^3]
-	_ffpropparams.push_back(parameter);
-	valid_line= ifs.getline(buffer, BUFF_SIZE);
+        _ffpropparams.push_back(parameter);
+        ifs.getline(buffer, BUFF_SIZE);
       }
-    valid_line= ifs.getline(buffer, BUFF_SIZE); //next line (block 3: line contains JSOLTY)
-    valid_line= ifs.getline(buffer, BUFF_SIZE); //next line
-    while(valid_line && strlen(buffer)!=0) //read block 4 (bonds)
+    ifs.getline(buffer, BUFF_SIZE); //next line (block 3: line contains JSOLTY)
+    ifs.getline(buffer, BUFF_SIZE); //next line
+    while(!ifs.fail() && strlen(buffer)!=0) //read block 4 (bonds)
       {
-	tokenize(vs, buffer," -\n\t");
-	parameter.clear();
+        tokenize(vs, buffer," -\n\t");
+        parameter.clear();
         parameter._a = vs[0]; // IBT
         parameter._b = vs[1]; // JBT
         parameter._dpar.push_back(atof(vs[2].c_str())); // RK [kcal/mol/(A^2)]
         parameter._dpar.push_back(atof(vs[3].c_str())); // REQ [A]
-	_ffbondparams.push_back(parameter);
-	valid_line= ifs.getline(buffer, BUFF_SIZE);
+        _ffbondparams.push_back(parameter);
+        ifs.getline(buffer, BUFF_SIZE);
       }
-    valid_line= ifs.getline(buffer, BUFF_SIZE); //next line
-    while(valid_line && strlen(buffer)!=0) //read block 5 (angles)
+    ifs.getline(buffer, BUFF_SIZE); //next line
+    while(!ifs.fail() && strlen(buffer)!=0) //read block 5 (angles)
       {
-	tokenize(vs, buffer," -\n\t");
-	parameter.clear();
+        tokenize(vs, buffer," -\n\t");
+        parameter.clear();
         parameter._a = vs[0]; //ITT
         parameter._b = vs[1]; //JTT
         parameter._c = vs[2]; //KTT
         parameter._dpar.push_back(atof(vs[3].c_str())); // TK [kcal/mol/(rad**2)]
         parameter._dpar.push_back(atof(vs[4].c_str())); // TEQ [degrees]
-	_ffangleparams.push_back(parameter);
-	valid_line= ifs.getline(buffer, BUFF_SIZE);
+        _ffangleparams.push_back(parameter);
+        ifs.getline(buffer, BUFF_SIZE);
       }
-    valid_line= ifs.getline(buffer, BUFF_SIZE); //next line
-    while(valid_line && strlen(buffer)!=0) //read block 6 (dihedrals)
+    ifs.getline(buffer, BUFF_SIZE); //next line
+    while(!ifs.fail() && strlen(buffer)!=0) //read block 6 (dihedrals)
       {
 	// torsional potental (PK/IDIVF) * (1 + cos(PN*phi - GAMMA))
 
-	tokenize(vs, buffer," -\n\t");
-	parameter.clear();
+        tokenize(vs, buffer," -\n\t");
+        parameter.clear();
         parameter._a = vs[0]; //IPT
         parameter._b = vs[1]; //JPT
         parameter._c = vs[2]; //KPT
@@ -1137,10 +1136,10 @@ namespace OpenBabel
         parameter._dpar.push_back(atof(vs[6].c_str())); // GAMMA [degrees]
         parameter._dpar.push_back(atof(vs[7].c_str())); // PN
         _fftorsionparams.push_back(parameter);
-	valid_line= ifs.getline(buffer, BUFF_SIZE);
+        ifs.getline(buffer, BUFF_SIZE);
       }
-    valid_line= ifs.getline(buffer, BUFF_SIZE); //next line 
-    while(valid_line && strlen(buffer)!=0) //read block 7(impropers)
+    ifs.getline(buffer, BUFF_SIZE); //next line 
+    while(!ifs.fail() && strlen(buffer)!=0) //read block 7(impropers)
       {
 //         The input is the same as in for the dihedrals except that
 // 	   the torsional barrier height is NOT divided by the factor
@@ -1154,8 +1153,8 @@ namespace OpenBabel
 // Improper torsions are not automatically generated by the Towhee code as the rules for determining where they are applied are not always straight-forward. Amber param96 exclusively uses the Stereocenter version of the improper torsions, and they are typically centered on an sp2 atom in order to enforce planarity with its three neighbors. Only one improper torsion allowed to be centered on any atom. These torsions are listed in the Amber literature as i-j-k-l where the angle is the dihedral between i-k-l and j-k-l, and the bonding pattern is i, j, and l are all bonded to atom k, and are also not bonded to each other. In the towhee_input file this stereo improper torsion is listed only for atom k, and the atom order there is l, i, j. Remember that you can set the improper type to 0 to have the code automatically determine the improper type (so long as inpstyle is 2).
 
 
-	tokenize(vs, buffer," -\n\t");
-	parameter.clear();
+        tokenize(vs, buffer," -\n\t");
+        parameter.clear();
         parameter._a = vs[0]; //IPT
         parameter._b = vs[1]; //JPT
         parameter._c = vs[2]; //KPT
@@ -1164,38 +1163,38 @@ namespace OpenBabel
         parameter._dpar.push_back(atof(vs[5].c_str())); // GAMMA
         parameter._dpar.push_back(atof(vs[6].c_str())); // PN
         _ffoopparams.push_back(parameter);
-	valid_line= ifs.getline(buffer, BUFF_SIZE);
+        ifs.getline(buffer, BUFF_SIZE);
       }
-    valid_line= ifs.getline(buffer, BUFF_SIZE); //next line 
-    while(valid_line && strlen(buffer)!=0) //read block 8 (10-12 H-BOND)
+    ifs.getline(buffer, BUFF_SIZE); //next line 
+    while(!ifs.fail() && strlen(buffer)!=0) //read block 8 (10-12 H-BOND)
       {
-	tokenize(vs, buffer," -\n\t");
-	parameter.clear();
+        tokenize(vs, buffer," -\n\t");
+        parameter.clear();
         parameter._a = vs[0]; // KT1
         parameter._b = vs[1]; // KT2
         parameter._dpar.push_back(atof(vs[2].c_str())); // A
         parameter._dpar.push_back(atof(vs[3].c_str())); // B
-	_ffhbondparams.push_back(parameter);
-	valid_line= ifs.getline(buffer, BUFF_SIZE);
+        _ffhbondparams.push_back(parameter);
+	    ifs.getline(buffer, BUFF_SIZE);
       }
-    valid_line= ifs.getline(buffer, BUFF_SIZE); //next line 
-    while(valid_line && strlen(buffer)!=0) //read block 9 (equivalent atoms for vdW potential)
+    ifs.getline(buffer, BUFF_SIZE); //next line 
+    while(!ifs.fail() && strlen(buffer)!=0) //read block 9 (equivalent atoms for vdW potential)
       {
-	// not used. We assume the types are all listed individually in block 10
-	valid_line= ifs.getline(buffer, BUFF_SIZE);
+	    // not used. We assume the types are all listed individually in block 10
+	    ifs.getline(buffer, BUFF_SIZE);
       }
-    valid_line= ifs.getline(buffer, BUFF_SIZE); //next line 
-    valid_line= ifs.getline(buffer, BUFF_SIZE); //'RE' means vdW radius and well-depth are read
-    while(valid_line && strlen(buffer)!=0) //read block 10 (vdWaals)
+    ifs.getline(buffer, BUFF_SIZE); //next line 
+    ifs.getline(buffer, BUFF_SIZE); //'RE' means vdW radius and well-depth are read
+    while(!ifs.fail() && strlen(buffer)!=0) //read block 10 (vdWaals)
       {
-	// van der Waals potental EDEP * ( (R/r)^12 - 2*(R/r)^6 )
-	tokenize(vs, buffer," -\n\t");
-	parameter.clear();
+        // van der Waals potental EDEP * ( (R/r)^12 - 2*(R/r)^6 )
+        tokenize(vs, buffer," -\n\t");
+        parameter.clear();
         parameter._a = vs[0]; // IBT
         parameter._dpar.push_back(atof(vs[1].c_str())); // R
         parameter._dpar.push_back(atof(vs[2].c_str())); // EDEP (kcal/mol)
-	_ffvdwparams.push_back(parameter);
-	valid_line= ifs.getline(buffer, BUFF_SIZE);
+        _ffvdwparams.push_back(parameter);
+	    ifs.getline(buffer, BUFF_SIZE);
       }
 
     if (ifs)
